# SFML-Android-Template

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/res/values-v27/: styles.xml
app/src/release/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
